istio/requestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  namespace: backend
  name: booking
spec:
  selector:
    matchLabels:
     app: booking
  jwtRules:
    - forwardOriginalToken: true
      outputPayloadToHeader: x-jwt-payload
      issuer: "http://keycloak.backend.svc.cluster.local:8080/realms/Istio"
      jwksUri: "http://keycloak.backend.svc.cluster.local:8080/realms/Istio/protocol/openid-connect/certs"
