istio/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: backend
  name: booking
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: "/booking"
      route:
        - destination:
            host: booking.backend.svc.cluster.local
            port:
              number: 8086
